万相台程序使用说明

--- a/万相台-adbrain/程序说明.md
+++ b/万相台-adbrain/程序说明.md
@@ -1,3 +1,11 @@
 
 获取万相台数据
 网站：https://adbrain.taobao.com/
+
+自定义位置：
+![1664436579813](https://user-images.githubusercontent.com/103317042/192968082-a0e399f9-ba1e-4ac2-ab69-b2e075136a78.jpg)
+
+
+![0ea0af76d0fe2685de42cc6ef45ee0a](https://user-images.githubusercontent.com/103317042/192966223-610a9247-f034-493e-8549-b71e0ca0279e.png)
+
+![1664436416220](https://user-images.githubusercontent.com/103317042/192967590-e6535541-67ed-4b25-91cb-4e8dad6533f6.jpg)
